# web-design-bench

./: .gitignore  README.md  pyproject.toml  run_eval.sh
docs/: README.md  design_decisions.md  evaluation_report.md  part2_animations.md  part3_frameworks.md  submission_summary.md
docs/grader_validation/: grader_validation.md  grader_validation_part-1.md  grader_validation_part-2.md  grader_validation_part-3.md
eval/: README.md  __init__.py  grader_validation.py  grading_analysis.py  run.py  summarize.py  visualize.py
eval/configs/: __init__.py
grader/: README.md  __init__.py
grader/test_template/: pages.json.template
jobs/: README.md
recipe/: README.md  __init__.py  agent.py  capture.py  generate.py  packager.py  prompt.py  spec.py
recipe/configs/: __init__.py  library.py
recipe/validators/: __init__.py  complexity.py  javascript.py  structure.py
results/: README.md  history.csv
results/2026-07-08__13-32-33/: summary.json
results/2026-07-09__13-09-00/: summary.json
results/part-2/: summary.json
results/part-3/: summary.json
tasks/: README.md
tasks/v1-aistartupneonhardconfig-73475c/: instruction.md  task.toml
tasks/v1-architecturestudiomonohardconfig-73475c/: instruction.md  task.toml
tasks/v1-cryptoexchangecyberpunkhardconfig-73475c/: instruction.md  task.toml
tasks/v1-fooddeliveryplayfulmediumconfig-73475c/: instruction.md  task.toml
tasks/v1-indiegameretromediumconfig-73475c/: instruction.md  task.toml
tasks/v1-lawfirmcorporateeasyconfig-73475c/: instruction.md  task.toml
tasks/v2-fintechanimationhardconfig-73475c/: task.toml  (+1 more)
(+284 files in other folders)
