[project]
name = "web-design-bench"
version = "0.1.0"
description = "RL environments for evaluating web design replication agents"
requires-python = ">=3.13"

dependencies = [
    "anthropic>=0.30.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.23.0",
    "imagehash>=4.3.0",
    "numpy>=1.26.0",
    "Jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "claude-agent-sdk>=0.0.1",
    "anyio>=4.0.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
modal = [
    "modal>=0.64.0",
]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval", "recipe", "grader"]
